# ros_intro

./: README.md
labs/: README.md
labs/exercises/lab1/exercise1/: README.md
labs/exercises/lab1/exercise2/: README.md
labs/exercises/lab1/exercise3/: README.md
labs/exercises/lab1/exercise4/: README.md
labs/exercises/lab1/exercise5/: README.md
labs/exercises_solutions/lab1/exercise1/: README.md
labs/exercises_solutions/lab1/exercise2/: CMakeLists.txt  README.md
labs/exercises_solutions/lab1/exercise2/libs/: CMakeLists.txt
labs/exercises_solutions/lab1/exercise2/libs/CalcUtils/: CMakeLists.txt
labs/exercises_solutions/lab1/exercise2/libs/CalcUtils/include/: CalcUtils.h
labs/exercises_solutions/lab1/exercise2/libs/CalcUtils/src/: CalcUtils.cpp
labs/exercises_solutions/lab1/exercise2/src/: CMakeLists.txt  main.cpp
labs/exercises_solutions/lab1/exercise3/: README.md
labs/exercises_solutions/lab1/exercise3/turtlesim_launcher/: CMakeLists.txt  package.xml
labs/exercises_solutions/lab1/exercise4_5/msg_srv/: CMakeLists.txt  package.xml
labs/exercises_solutions/lab1/exercise4_5/msg_srv/msg/: simple_msg.msg
labs/exercises_solutions/lab1/exercise4_5/msg_srv/srv/: simple_srv.srv
labs/exercises_solutions/lab2/exercise1/: README.md
labs/exercises_solutions/lab2/exercise1/turtlesim_launcher/: CMakeLists.txt
labs/exercises_solutions/lab2/exercise1/turtlesim_launcher/launch/: run.launch
labs/exercises_solutions/lab2/exercise2/: CMakeLists.txt  package.xml
labs/exercises_solutions/lab2/exercise2/launch/: run.launch
labs/exercises_solutions/lab2/exercise2/src/: publisher.cpp  subscriber.cpp
labs/homeworks/homework1/: CMakeLists.txt  README.md  package.xml
labs/homeworks/homework1/src/: commander_node.cpp
labs/homeworks/homework2/: README.md
labs/homeworks/homework2/buggy/: CMakeLists.txt  package.xml
labs/homeworks/homework2/buggy/launch/: test.launch
labs/homeworks/homework2/buggy/src/: pub.cpp  sub.cpp
labs/homeworks/homework3/: README.md
section00/: run_ros_node_cpu.sh  run_ros_node_gpu.sh
section00/pub_sub/: CMakeLists.txt
section00/pub_sub/launch/: server_client.launch
section00/pub_sub/msg/: r2d2.msg
section00/pub_sub/src/: friend_hello_pub.cpp  friend_hello_sub.cpp  friend_service_client.cpp
section01/pub_sub/: CMakeLists.txt  package.xml
section01/pub_sub/launch/: pub_sub.launch
section01/pub_sub/msg/: friend_info.msg
section01/pub_sub/src/: friend_hello_sub.cpp  friend_service_client.cpp  friend_service_server.cpp
section01_skeleton/pub_sub/: CMakeLists.txt  package.xml
section01_skeleton/pub_sub/launch/: pub_sub.launch
section01_skeleton/pub_sub/src/: friend_hello_pub.cpp  friend_hello_sub.cpp  friend_service_client.cpp  friend_service_server.cpp
section02/ros_debugging/: CMakeLists.txt  package.xml
section02/ros_debugging/launch/: gdb_hello_world.launch  logging_hello_world.launch  memory_checking_valgrind.launch  rqt_debugging.launch
section02/ros_debugging/src/: gdb_hello_world.cpp  logging_hello_world.cpp  rqt_logging.cpp
section02/ros_debugging_skeleton/launch/: gdb_hello_world.launch  memory_checking_valgrind.launch  rqt_debugging.launch
section02/ros_debugging_skeleton/src/: logging_hello_world.cpp
section02/ros_urdf/: package.xml
section02/ros_urdf/urdf/: step_08.urdf  step_09.urdf
section02/ros_visualization/: CMakeLists.txt  package.xml
section02/ros_visualization/launch/: joy_hagen_basic_control.launch  joy_hagen_camera.launch  joy_hagen_marker_array.launch  joy_hagen_point_cloud.launch  joy_hagen_pub.launch  joy_hagen_sub.launch
section02/ros_visualization/src/: joy_hagen_basic_control.cpp  joy_hagen_marker_array.cpp  joy_hagen_point_cloud.cpp  joy_hagen_pub.cpp  joy_hagen_sub.cpp
section02/ros_visualization_skeleton/: CMakeLists.txt
section02/ros_visualization_skeleton/launch/: joy_hagen_basic_control.launch  joy_hagen_camera.launch  joy_hagen_pub.launch  joy_hagen_sub.launch
section02/ros_visualization_skeleton/src/: joy_hagen_point_cloud.cpp
section02_skeleton/ros_debugging_skeleton/: CMakeLists.txt  package.xml
section02_skeleton/ros_debugging_skeleton/config/: logging.config
section02_skeleton/ros_debugging_skeleton/launch/: gdb_hello_world.launch  logging_hello_world.launch  memory_checking_valgrind.launch
section02_skeleton/ros_debugging_skeleton/src/: gdb_hello_world.cpp  logging_hello_world.cpp  rqt_logging.cpp
section02_skeleton/ros_gazebo_skeleton/ros_urdf/: CMakeLists.txt
section02_skeleton/ros_gazebo_skeleton/ros_urdf/config/: gripper.yaml  head.yaml
section02_skeleton/ros_gazebo_skeleton/ros_urdf/launch/: diffdrive.launch  display_robot.launch  gazebo.launch  gripper.launch  head.launch  joints_control.launch
section02_skeleton/ros_gazebo_skeleton/ros_urdf/urdf/: step_01.urdf  step_02.urdf  step_03.urdf  step_04.urdf  step_05.urdf  step_06.urdf  step_07.urdf  step_08.urdf  step_09.urdf  step_10.urdf  step_11.urdf  step_12.urdf
section02_skeleton/ros_visualization_skeleton/: CMakeLists.txt  package.xml
section02_skeleton/ros_visualization_skeleton/launch/: joy_hagen_basic_control.launch  joy_hagen_marker_array.launch  joy_hagen_point_cloud.launch
section02_skeleton/ros_visualization_skeleton/src/: joy_hagen_basic_control.cpp  joy_hagen_camera.cpp  joy_hagen_marker_array.cpp  joy_hagen_point_cloud.cpp  joy_hagen_pub.cpp  joy_hagen_sub.cpp
